// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a step indicator with multiple segments 1`] = `
<div>
  <div
    aria-label="progress"
    class="usa-step-indicator usa-step-indicator--counters-sm"
  >
    <ol
      class="usa-step-indicator__segments"
    >
      <li
        aria-current="true"
        class="usa-step-indicator__segment usa-step-indicator__segment--current"
      >
        <span
          class="usa-step-indicator__segment-label"
        >
          <div
            class="text-base-dark"
          >
            Step 1
          </div>
        </span>
      </li>
      <li
        class="usa-step-indicator__segment"
      >
        <span
          class="usa-step-indicator__segment-label"
        >
          <div
            class="text-base-dark"
          >
            Step 2
          </div>
           
          <span
            class="usa-sr-only"
          >
            not completed
          </span>
        </span>
      </li>
      <li
        class="usa-step-indicator__segment"
      >
        <span
          class="usa-step-indicator__segment-label"
        >
          <div
            class="text-base-dark"
          >
            Step 3
          </div>
           
          <span
            class="usa-sr-only"
          >
            not completed
          </span>
        </span>
      </li>
    </ol>
    <div
      class="usa-step-indicator__header"
    >
      <h2
        class="usa-step-indicator__heading"
      >
        <span
          class="usa-step-indicator__heading-counter"
        >
          <span
            class="usa-sr-only"
          >
            Step
          </span>
          <span
            class="usa-step-indicator__current-step bg-base-dark"
          >
            1
          </span>
          <span
            class="usa-step-indicator__total-steps text-base-dark margin-left-2px"
          >
            of 
            3
          </span>
        </span>
        <span
          class="usa-step-indicator__heading-text"
        >
          Step 1
        </span>
      </h2>
    </div>
  </div>
</div>
`;

exports[`renders a step indicator with one completed step 1`] = `
<div>
  <div
    aria-label="progress"
    class="usa-step-indicator usa-step-indicator--counters-sm"
  >
    <ol
      class="usa-step-indicator__segments"
    >
      <li
        class="usa-step-indicator__segment usa-step-indicator__segment--complete"
      >
        <span
          class="usa-step-indicator__segment-label"
        >
          <div
            class="text-base-dark"
          >
            Step 1
          </div>
           
          <span
            class="usa-sr-only"
          >
            completed
          </span>
        </span>
      </li>
      <li
        aria-current="true"
        class="usa-step-indicator__segment usa-step-indicator__segment--current"
      >
        <span
          class="usa-step-indicator__segment-label"
        >
          <div
            class="text-base-dark"
          >
            Step 2
          </div>
        </span>
      </li>
      <li
        class="usa-step-indicator__segment"
      >
        <span
          class="usa-step-indicator__segment-label"
        >
          <div
            class="text-base-dark"
          >
            Step 3
          </div>
           
          <span
            class="usa-sr-only"
          >
            not completed
          </span>
        </span>
      </li>
    </ol>
    <div
      class="usa-step-indicator__header"
    >
      <h2
        class="usa-step-indicator__heading"
      >
        <span
          class="usa-step-indicator__heading-counter"
        >
          <span
            class="usa-sr-only"
          >
            Step
          </span>
          <span
            class="usa-step-indicator__current-step bg-base-dark"
          >
            2
          </span>
          <span
            class="usa-step-indicator__total-steps text-base-dark margin-left-2px"
          >
            of 
            3
          </span>
        </span>
        <span
          class="usa-step-indicator__heading-text"
        >
          Step 2
        </span>
      </h2>
    </div>
  </div>
</div>
`;

exports[`returns null when current is out of bounds 1`] = `<div />`;
